syntax = "proto3";
package orders.v1;
option go_package = "./pb;orders_pb";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc PayOrder(PayOrderRequest) returns (OrderResponse);
}

message Address {
  string city = 1;
  string street = 2;
}

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
}

message CreateOrderRequest {
  string customer_id = 1;
  Address address = 2;
  repeated OrderItem items = 3;
}

message PayOrderRequest {
  string order_id = 1;
}

message OrderResponse {
  string order_id = 1;
  string status = 2;
  double final_price = 3;
  string order_number = 4;
}